<resources>
    <string name="app_name">Explorista</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="explorista_txt">Explorista</string>
    <string name="phone_number">Phone number</string>
    <string name="txt_proceed">Proceed</string>
    <string name="skip"><u>Skip</u></string>
    <string name="continue_with">Continue with</string>
    <string name="name">Name</string>
    <string name="verification">Verification</string>
    <string name="txt_verification">Enter the verifcation code we just sent you on your Mobile-number 9999999999.</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_resend">Resend</string>
    <string name="select_location">Select Location</string>
    <string name="txt_select_location">Hi , Nice to meet you !</string>
    <string name="txt_select_location_second">Choose your location to find General Stores around you.</string>
    <string name="txt_use_current_location">Use Current Location</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="dash">-</string>
    <string name="gmail">Gmail</string>
    <string name="please_enter_your_mobile_number">Please enter your mobille number</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="reload_page">Reload</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="txt_try_again">Try Again</string>
    <string name="something_went">Oops ! Something went wrong.</string>
    <string name="txt_next">Next</string>
    <string name="txt_back">Back</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="app_logout">App Logout</string>
    <string name="session_logout">Session Logout</string>
    <string name="received_message">Received Message</string>
</resources>