<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/rl_try_again"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_oops_something_went_wrong"
            android:textColor="@color/black"
            android:text="@string/something_went"
            android:textSize="16sp"
            android:singleLine="true"
            android:fontFamily="@font/philosopher"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_try_again"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_oops_something_went_wrong"
            android:text="@string/txt_try_again"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:singleLine="true"
            android:fontFamily="@font/philosopher"
            android:background="@drawable/login_or_sign_up_ctm_bg"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="35dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_no_internet"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_no_internet"
            android:textColor="@color/black"
            android:text="@string/no_internet_connection"
            android:textSize="16sp"
            android:singleLine="true"
            android:fontFamily="@font/philosopher"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_no_internet"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_no_internet"
            android:text="@string/reload_page"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:singleLine="true"
            android:fontFamily="@font/philosopher"
            android:background="@drawable/login_or_sign_up_ctm_bg"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="35dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_no_record_found"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/no_record_found"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:text="@string/no_record_found"
            android:textSize="16sp"
            android:fontFamily="@font/philosopher"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/image_back_login_location"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:background="@color/login_or_sign_up_bg_color"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/login_or_sign_up_bg_color"
                    android:fontFamily="@font/ibm_regular"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="textFilter"
                    android:singleLine="true"
                    android:text="@string/select_location"
                    android:textAlignment="gravity"
                    android:textColor="@color/login_or_sign_up_bg_color"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded,TextFields,TextViewEdits" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/custom_rectangle"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:id="@+id/ll_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:background="@color/login_or_sign_up_bg_color" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/ibm_regular"
                        android:gravity="center"
                        android:background="@color/login_or_sign_up_bg_color"
                        android:text="@string/txt_select_location"
                        android:textColor="@color/login_or_sign_up_bg_color"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@color/login_or_sign_up_bg_color"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/ibm_regular"
                        android:gravity="center"
                        android:text="@string/txt_select_location_second"
                        android:textColor="@color/login_or_sign_up_bg_color"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnUserCurrentLocation"
                        android:layout_width="match_parent"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="60dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"
                        android:background="@drawable/login_or_sign_up_ctm_bg"
                        android:fontFamily="@font/philosopher_regular"
                        android:gravity="center"
                        android:text="@string/txt_use_current_location"
                        android:textAllCaps="false"
                        android:textColor="@color/login_or_sign_up_bg_color"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/tv_skip_location"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@color/login_or_sign_up_bg_color"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/philosopher_regular"
                        android:gravity="center"
                        android:text="@string/skip"
                        android:textColor="@color/login_or_sign_up_bg_color"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

